# gen/http/probes/server/encode_decode.go
@@ -1,0 +1,24 @@
+// Code generated by goa v3.20.1, DO NOT EDIT.
+//
+// probes HTTP server encoders and decoders
+//
+// Command:
+// $ goa gen github.com/meier-christoph/todo-backend-golang-goa/design
+
+package server
+
+import (
+	"context"
+	"net/http"
+
+	goahttp "goa.design/goa/v3/http"
+)
+
+// EncodeHealthyResponse returns an encoder for responses returned by the
+// probes healthy endpoint.
+func EncodeHealthyResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+	return func(ctx context.Context, w http.ResponseWriter, v any) error {
+		w.WriteHeader(http.StatusOK)
+		return nil
+	}
+}
