# gen/http/probes/server/paths.go
@@ -1,0 +1,13 @@
+// Code generated by goa v3.20.1, DO NOT EDIT.
+//
+// HTTP request path constructors for the probes service.
+//
+// Command:
+// $ goa gen github.com/meier-christoph/todo-backend-golang-goa/design
+
+package server
+
+// HealthyProbesPath returns the URL path to the probes service healthy HTTP endpoint.
+func HealthyProbesPath() string {
+	return "/healthy"
+}
