# gen/http/probes/server/types.go
@@ -1,0 +1,8 @@
+// Code generated by goa v3.20.1, DO NOT EDIT.
+//
+// probes HTTP server types
+//
+// Command:
+// $ goa gen github.com/meier-christoph/todo-backend-golang-goa/design
+
+package server
