# internal/probes.go
@@ -1,0 +1,10 @@
+package internal
+
+import "context"
+
+type ProbesService struct {
+}
+
+func (it *ProbesService) Healthy(ctx context.Context) (err error) {
+	return nil
+}
